--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <h1>lucho</h1>
     <img src="https://preview.redd.it/y-esa-silla-de-virgo-momo-v0-emxyt0cohcjb1.png?width=759&format=png&auto=webp&s=885b8582096c9bc23cfb36dca20720a8f01860bf" alt="">
 </body>
+<script src="java.js"></script>
 </html>
